fix: biometric on small screen b

--- a/omn/src/app/biometrics/biometrics.component.scss
+++ b/omn/src/app/biometrics/biometrics.component.scss
@@ -12,7 +12,7 @@
 .button-text{
     color: var(--app-dark-green);
 }
-.biometrics {
+#biometricsIonContent {
   --overflow: scroll;
   overflow: scroll;
   -webkit-overflow-scrolling: touch;
